[gd_scene format=3 uid="uid://cxhirmhnvqi3c"]

[ext_resource type="Script" uid="uid://cdx4px7vlixbi" path="res://ui/transition_ui/scripts/transition_ui.gd" id="1_48e50"]
[ext_resource type="Texture2D" uid="uid://chjltiteqc731" path="res://ui/transition_ui/art/arcade_screen_sheet.png" id="2_l4eru"]
[ext_resource type="Texture2D" uid="uid://bm66vnnnuglam" path="res://entities/ninja/art/arcade_ninja_sheet.png" id="3_p5bwo"]
[ext_resource type="Texture2D" uid="uid://devatjarjouva" path="res://entities/stages/dummy_stage/art/arcade_dummy_sheet.png" id="4_ei7vy"]
[ext_resource type="Texture2D" uid="uid://bjoxx8phmbx6u" path="res://entities/stages/base_stage/art/enemy_death_cloud.png" id="5_h36x7"]
[ext_resource type="Texture2D" uid="uid://c6g1l6ty4de26" path="res://entities/stages/potatomous_stage/art/arcade_potatomous.png" id="5_xojix"]
[ext_resource type="FontFile" uid="uid://b4l4vamirhbk5" path="res://ui/text_ui/fonts/ware.ttf" id="6_kf633"]
[ext_resource type="Shader" uid="uid://rjy4xp4r2u4h" path="res://ui/crt_filter/crt.gdshader" id="8_cbsv2"]
[ext_resource type="LabelSettings" uid="uid://ep7go2kb7utp" path="res://ui/text_ui/resources/number_settings_number.tres" id="8_y2f0o"]
[ext_resource type="AnimationLibrary" uid="uid://dmnbvsi3arhae" path="res://entities/stages/dummy_stage/animations/DummyLibrary.res" id="9_ayxtp"]
[ext_resource type="AnimationLibrary" uid="uid://bk0my1jt02t0m" path="res://entities/stages/potatomous_stage/animations/PotatomousLibrary.res" id="11_8qcxo"]
[ext_resource type="AudioStream" uid="uid://bsffdgrgkmr6k" path="res://ui/transition_ui/audio/back_level.wav" id="17_m1cc1"]
[ext_resource type="Texture2D" uid="uid://75es56r2om70" path="res://ui/transition_ui/art/arcade_screen_overlay.png" id="20_jwvd4"]
[ext_resource type="AudioStream" uid="uid://dervq7k4dm652" path="res://ui/transition_ui/health_points/ninja_health_point/audio/player_health_point_added.wav" id="21_0nyji"]
[ext_resource type="AudioStream" uid="uid://410jvja0wygg" path="res://ui/transition_ui/health_points/audio/enemy_health_point_added.wav" id="22_qjwl3"]

[sub_resource type="LabelSettings" id="LabelSettings_t8q51"]
font = ExtResource("6_kf633")
font_size = 72
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k5ous"]
font = ExtResource("6_kf633")
font_size = 48
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_owkr7"]
font = ExtResource("6_kf633")
font_size = 48
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_36hpg"]
shader = ExtResource("8_cbsv2")
shader_parameter/enable_grain = false
shader_parameter/enable_curving = true
shader_parameter/enable_scanlines = true
shader_parameter/enable_chromatic_aberration = false
shader_parameter/enable_rgb_grid = false
shader_parameter/enable_vhs_wiggle = false
shader_parameter/enable_vignette = false
shader_parameter/brightness_multiplier = 1.05
shader_parameter/grain_strength = 0.25
shader_parameter/curve_power = 1.05
shader_parameter/vignette_size = 0.4
shader_parameter/vignette_smoothness = 0.4
shader_parameter/scanlines_interval = 4.0
shader_parameter/scanline_opacity = 0.25
shader_parameter/scanline_thickness = 2.0
shader_parameter/chromatic_aberration_strength = 1.0
shader_parameter/wiggle = 0.002

[sub_resource type="Animation" id="Animation_m1cc1"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionSprite/InsertCoin:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionSprite/SubtitleLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransitionSprite/GameOverLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionSprite/DeathSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ArcadeOverlay:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TransitionSprite/PlayerSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TransitionSprite/DummySprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TransitionSprite/GameOverLabel:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("TransitionSprite/DeathSprite:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ArcadeOverlay:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("TransitionSprite/PlayerSprite:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("TransitionSprite/SubtitleLabel:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("TransitionSprite/InsertCoin:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("TransitionSprite/PlayerSprite:frame")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("TransitionSprite/PotatomousSprite:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("TransitionSprite/LevelNode:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("TransitionSprite/LevelNode/NumberLabel:text")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("TransitionSprite/LevelNode/LevelLabel:text")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("TransitionSprite/LevelNode/SlashLabel:text")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("TransitionSprite:frame")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2f0o"]
_data = {
&"RESET": SubResource("Animation_m1cc1")
}

[node name="TransitionUI" type="Node2D" unique_id=1578950508]
texture_filter = 1
script = ExtResource("1_48e50")
metadata/_edit_vertical_guides_ = [-256.0, 256.0, -156.0]
metadata/_edit_horizontal_guides_ = [-220.0, 220.0, -96.0]

[node name="TransitionSprite" type="Sprite2D" parent="." unique_id=791156981]
texture_filter = 1
position = Vector2(-1, 0)
texture = ExtResource("2_l4eru")
hframes = 7

[node name="PlayerHPContainer" type="HBoxContainer" parent="TransitionSprite" unique_id=1823692520]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -488.0
offset_top = -464.0
offset_right = -2288.0
offset_bottom = -1529.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8, 8)
alignment = 2

[node name="EnemyHPContainer" type="HBoxContainer" parent="TransitionSprite" unique_id=1963269928]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -488.0
offset_top = 312.0
offset_right = -2288.0
offset_bottom = -749.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8, 8)

[node name="PlayerSprite" type="Sprite2D" parent="TransitionSprite" unique_id=1710962071]
visible = false
position = Vector2(-340, -224)
scale = Vector2(8, 8)
texture = ExtResource("3_p5bwo")
hframes = 15

[node name="DummySprite" type="Sprite2D" parent="TransitionSprite" unique_id=2022578717]
visible = false
position = Vector2(348, 188)
scale = Vector2(8, 8)
texture = ExtResource("4_ei7vy")
hframes = 10

[node name="Marker2D3" type="Marker2D" parent="TransitionSprite/DummySprite" unique_id=202412932]
position = Vector2(-24.875, -2)
scale = Vector2(0.125, 0.125)

[node name="Marker2D2" type="Marker2D" parent="TransitionSprite/DummySprite" unique_id=1369884867]
position = Vector2(1.875, -4.75)
scale = Vector2(0.125, 0.125)

[node name="Marker2D" type="Marker2D" parent="TransitionSprite/DummySprite" unique_id=380521363]
position = Vector2(-13.875, 15.75)
scale = Vector2(0.125, 0.125)

[node name="PotatomousSprite" type="Sprite2D" parent="TransitionSprite" unique_id=1974757801]
visible = false
position = Vector2(278, 234)
scale = Vector2(8, 8)
texture = ExtResource("5_xojix")
hframes = 4

[node name="Marker2D3" type="Marker2D" parent="TransitionSprite/PotatomousSprite" unique_id=1614187876]
position = Vector2(-9.125, -8.75)
scale = Vector2(0.125, 0.125)

[node name="Marker2D2" type="Marker2D" parent="TransitionSprite/PotatomousSprite" unique_id=403032662]
position = Vector2(10.125, -5.75)
scale = Vector2(0.125, 0.125)

[node name="Marker2D" type="Marker2D" parent="TransitionSprite/PotatomousSprite" unique_id=788029710]
position = Vector2(-10.125, 2.75)
scale = Vector2(0.125, 0.125)

[node name="DeathSprite" type="Sprite2D" parent="TransitionSprite" unique_id=931012890]
visible = false
position = Vector2(275, 220)
scale = Vector2(8, 8)
texture = ExtResource("5_h36x7")
hframes = 2
vframes = 2

[node name="GameOverLabel" type="Label" parent="TransitionSprite" unique_id=922625832]
visible = false
texture_filter = 1
offset_left = -391.0
offset_top = -352.0
offset_right = 394.0
offset_bottom = -229.0
text = "GAME OVER!!!"
label_settings = SubResource("LabelSettings_t8q51")
horizontal_alignment = 1

[node name="LevelNode" type="HBoxContainer" parent="TransitionSprite" unique_id=1952307993]
visible = false
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 73.0
alignment = 1

[node name="NumberLabel" type="Label" parent="TransitionSprite/LevelNode" unique_id=934789295]
custom_minimum_size = Vector2(128, 96)
layout_mode = 2
label_settings = ExtResource("8_y2f0o")
horizontal_alignment = 1

[node name="SlashLabel" type="Label" parent="TransitionSprite/LevelNode" unique_id=300755084]
layout_mode = 2
label_settings = ExtResource("8_y2f0o")
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="TransitionSprite/LevelNode" unique_id=1048666080]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
label_settings = ExtResource("8_y2f0o")

[node name="SubtitleLabel" type="Label" parent="TransitionSprite" unique_id=1052728450]
visible = false
texture_filter = 1
offset_left = -242.0
offset_top = 22.0
offset_right = 254.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 16
text = "FASTER!"
label_settings = SubResource("LabelSettings_k5ous")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InsertCoin" type="Label" parent="TransitionSprite" unique_id=153642850]
visible = false
texture_filter = 1
offset_left = -807.0
offset_top = -187.0
offset_right = 809.0
offset_bottom = 188.0
text = "INSERT CREDIT TO CONTINUE"
label_settings = SubResource("LabelSettings_owkr7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CRTPanel" type="ColorRect" parent="TransitionSprite" unique_id=333636847]
z_index = 1
texture_filter = 1
material = SubResource("ShaderMaterial_36hpg")
offset_left = -512.0
offset_top = -480.0
offset_right = 512.0
offset_bottom = 480.0
metadata/_edit_use_anchors_ = true

[node name="LaughTimer" type="Timer" parent="." unique_id=888262657]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1040806801]
libraries/ = SubResource("AnimationLibrary_y2f0o")
libraries/DummyLibrary = ExtResource("9_ayxtp")
libraries/PotatomousLibrary = ExtResource("11_8qcxo")

[node name="ArcadeOverlay" type="Sprite2D" parent="." unique_id=245851263]
visible = false
position = Vector2(-1, 0)
texture = ExtResource("20_jwvd4")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=1559630572]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="." unique_id=968955498]

[node name="LivesAdded" type="AudioStreamPlayer" parent="." unique_id=293447052]
stream = ExtResource("21_0nyji")

[node name="LivesEnemyAdded" type="AudioStreamPlayer" parent="." unique_id=1990383163]
stream = ExtResource("22_qjwl3")

[node name="NextLevel" type="AudioStreamPlayer" parent="." unique_id=1196882986]

[node name="LostLevel" type="AudioStreamPlayer" parent="." unique_id=932720530]
stream = ExtResource("17_m1cc1")

[node name="CharacterType" type="AudioStreamPlayer" parent="." unique_id=1943461716]

[connection signal="timeout" from="LaughTimer" to="." method="_on_laugh_timer_timeout"]
